<resources>
    <string name="app_name">Easy Recipes</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="alimentacao_saudavel">Alimentação Saudável</string>
    <string name="lanches">Lanches</string>
    <string name="doces_sobremesas">Doces e Sobremesas</string>
    <string name="bebidas">Bebidas</string>
    <string name="massas">Massas</string>
    <string name="sopas">Sopas</string>
    <string name="saladas_e_molhos">Saladas e Molhos</string>
    <string name="peixes_e_frutos_do_mar">Peixes e Frutos do Mar</string>
    <string name="aves">Aves</string>
    <string name="carnes">Carnes</string>
    <string name="bolo_e_tortas">Bolo e Tortas</string>
    <string name="localizacao">Localização</string>
    <string name="ver_receita">Ver receita</string>
    <string name="title_activity_recipe">RecipeActivity</string>
    <string name="title_activity_test">TestActivity</string>
    <string name="recipeUrl">recipeUrl</string>
    <string name="btn_see_recipe_text">Ver receita</string>
    <string name="title_activity_category">CategoryActivity</string>
    <string name="mais_destaques">Mais Destaques</string>
    <string name="mais_vistas">Mais Vistas</string>
    <string name="title_activity_search">SearchActivity</string>
    <string name="btn_next_txt"><![CDATA[Próxima >>]]></string>
    <string name="btn_prev_txt"><![CDATA[<< Anterior]]></string>
    <string name="txt_not_found_txt">Sua busca não retornou nenhum resultado.\nTente buscar novamente.</string>
    <string name="title_activity_maps">Map</string>
</resources>
